--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,2 +1,9 @@
-<p>Hello Layout!</p>
+<h1>{{ site.title }}</h1>
+<h2>{{ page.title }}</h2>
+
+<p>My pages:</p>
+<a href="index.html">Home</a>
+<a href="more.html">More</a>
+<hr/>
+
 {{ content }}
